# Dolphin_Platform

./: .env  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  app.py  check_app_startup.py  database.py  debug_output.txt  environment.yml  find_autofill.py  find_pd.py  models.py  pyproject.toml  requirements.txt  resize.py  smb_test_output.txt  stderr.txt  test_analysis_tool.py  test_api_search.py  test_err.txt  test_lcms_api.py  test_out.txt  test_output.txt  test_plate_designer.py  test_results_log.txt  test_rxn.py  test_rxn_smart.py  test_screenings_eln_parser.py
.github/workflows/: ci.yml
LCMS_Analysis_Tool/: Dockerfile  README.md  requirements.txt  start.sh
LCMS_Analysis_Tool/app/: analysis.py  main.py  utils.py  visuals.py
LCMS_Analysis_Tool/app/parsing/: lcms_parser.py
blueprints/: lcms_analyser.py  lcms_qc.py
blueprints/lc_ms/: __init__.py  api.py  routes.py  utils.py
blueprints/ppm/: __init__.py  ai_fallback.py  api.py  extractor.py  molscribe_runner.py  normalization.py  routes.py
blueprints/screenings/: __init__.py  ai_layout.py  api.py  lcms_backend.py  routes.py
data/: IPC_measurements.csv  IPC_measurements.xlsx  LCMS_database.csv  LCMS_database.xlsx  Purification_measurements.csv  Purification_measurements.xlsx
notebooks/: demo.ipynb
overrides/: app.py
overrides/static/: app.js  plate.js  style.css
overrides/templates/: base.html  batches.html  bottles.html  chemicals.html  list.html  new.html  plate_designer.html  plate_detail.html  plates_list.html  surf.html
src/dolphin/agents/: __init__.py  synthesis_agent.py
static/: analysis_tool.js  app.js  batch_ui.js  style.css
static/lc_ms/: light_theme.css  script.js  styles.css
static/lc_ms/icons/: HEAD_SNIPPET.html  README.txt  site.webmanifest
static/ppm/: ppm.js
static/screenings/: screenings.css  screenings.js
templates/: analysis_tool.html  base.html  batches.html  bottles.html  chemicals.html  index.html  lcms_analyser.html  lcms_tool.html  plate_designer.html  plates.html  requests.html  sd_exporter.html  search.html
templates/lc_ms/: base_lcms.html  index.html  ipc.html  ipc_measurements.html  products.html  purif.html  purif_measurements.html
templates/ppm/: index.html
templates/screenings/: detail.html  index.html  new.html
tests/: conftest.py  test_chem_utils.py
utils/: chem_utils.py
utils/chem_converter/: cas_client.py  converters.py
